samples/errors/break.our
main()
{
break;

//if
//{
//break
//}
}

/*
"break" is not placed in cycle.  Line: 3
*/